<resources>
    <string name="app_name">attempt2</string>
    <string name="submit22">Submit22</string>
    <string name="NFLP_DATA1">National Financial</string>
    <string name="NFLP_DATA2">Literacy Program</string>
    <string name="add_new_session">Add New Session</string>
    <string name="title_activity_data_entry__page">Data Entry Page</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sbp_bsc_fsd_nflp_app">SBP BSC FSD NFLP App</string>
    <string name="textview1">TextView</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="date_of_session">Date of Session</string>
    <string name="district">District</string>
    <string name="hint">hint</string>
    <string name="field_trainer_cell">Field Trainer Cell Number</string>
    <string name="textview2">TextView</string>
    <string name="field_trainer_name">Field Trainer Name</string>
    <string name="associate_bank">Associate Bank</string>
    <string name="venue">Venue</string>
    <string name="partner_institute">Partner Institute</string>
    <string name="lead_bank">Lead Bank</string>
    <string name="nextButton">Next</string>
    <string name="hint1">hint</string>
    <string name="hint2">hint</string>
    <string name="hint3">hint</string>
    <string name="participantsNumber">No. of Participants</string>
    <string name="topTitleParticipants">Enter Participants detail</string>
    <string-array name="bank_names">
        <item>Al Baraka Bank Limited</item>
        <item>Askari Bank Limited</item>
        <item>Allied Bank Limited</item>
        <item>Bank Alfalah Limited</item>
        <item>Bank Al Habib Limited</item>
        <item>Bank Islami Pakistan Limited</item>
        <item>Dubai Islamic Bank Pakistan Limited</item>
        <item>Faysal Bank Limited</item>
        <item>First Women Bank Limited</item>
        <item>Habib Bank Limited</item>
        <item>Habib Metropolitan Bank Limited</item>
        <item>JS Bank Limited</item>
        <item>MCB Bank Limited</item>
        <item>Meezan Bank Limited</item>
        <item>National Bank of Pakistan</item>
        <item>Samba Bank Limited</item>
        <item>Soneri Bank Limited</item>
        <item>Standard Chartered Bank (Pakistan) Limited</item>
        <item>The Bank of Khyber</item>
        <item>The Bank of Punjab</item>
        <item>United Bank Limited</item>
    </string-array>
    <string-array name="associate_bank_names">
        <item>AKBL</item>
        <item>ABL</item>
        <item>Apna</item>
        <item>BAFL</item>
        <item>BAHL</item>
        <item>BOP</item>
        <item>DIBL</item>
        <item>FBL</item>
        <item>FINCA</item>
        <item>FMFB</item>
        <item>HBL</item>
        <item>KMBL</item>
        <item>MBL</item>
        <item>MCB</item>
        <item>MMBL</item>
        <item>NBP</item>
        <item>SAMBA</item>
        <item>SBL</item>
        <item>SCB</item>
        <item>TMFBL</item>
        <item>U BANK</item>
        <item>UBL</item>
        <item>ZTBL</item>
    </string-array>
    <string-array name="district_names">
        <item>Faisalabad</item>
        <item>Jhang</item>
        <item>Chiniot</item>
        <item>Sargodha</item>
        <item>Toba Tek Singh</item>
        <item>Khushab</item>
    </string-array>
    <string name="acctype1">Asaan Account</string>
    <string name="acctype2">Branchless</string>
    <string name="selected_item">Selected item:</string>
    <string-array name="age_input">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>
</resources>
