<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/topTitle"
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:background="@drawable/bottom_border"
                android:fontFamily="@font/google_regular"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/title_activity_data_entry__page"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/leadbank"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:ems="10"
                android:gravity="center_vertical"
                android:text="@string/lead_bank"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/inputinputLeadBank"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/associateBank"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/associate_bank"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/inputAssociateBank"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/partnerInstitute"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/partner_institute"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/inputPartnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:gravity="center_vertical"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/inputDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/venue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venue"
                android:gravity="center_vertical"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/inputVenue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/fieldTrainerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_trainer_name"
                android:gravity="center_vertical"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/inputFieldTrainerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/fieldTrainerCell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_trainer_cell"
                android:gravity="center_vertical"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/inputFieldTrainerCell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/sessionDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_session"
                android:gravity="center_vertical"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/inputDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/timeStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:gravity="center_vertical"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/inputTimeStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/timeEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:gravity="center_vertical"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/inputTimeEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time"
                android:textSize="17sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
